Version 17.0.1 (2019-09-08)
---------------------------
- Adding blank character strings to custom commands in Expert Mode will no longer cause crashes and infinite loops [https://github.com/clechasseur/pathcopycopy/issues/87]


Version 17.0 (2019-09-04)
-------------------------
- Settings application now requires .NET Framework 4 instead of 2 [https://github.com/clechasseur/pathcopycopy/issues/64]
- Next button during upgrade will correctly read "Install" [https://github.com/clechasseur/pathcopycopy/issues/73]
- Exporting settings to a path with spaces now works properly [https://github.com/clechasseur/pathcopycopy/issues/68]
- Copying an Internet Path with spaces now works properly [https://github.com/clechasseur/pathcopycopy/issues/63]
- New option to display previews instead of descriptions in the main menu also. [https://github.com/clechasseur/pathcopycopy/issues/70]
- "Copy WSL Path" command now escapes spaces bash-style. [https://github.com/clechasseur/pathcopycopy/issues/61]
- Add "Copy MSYS/MSYS2 Path" command [https://github.com/clechasseur/pathcopycopy/issues/51]
- Selecting a command in the Commands page of the Settings application no longer changes the Ctrl key command selection [https://github.com/clechasseur/pathcopycopy/issues/74]
- Add custom command option to launch executable with a filelist instead of passing paths directly [https://github.com/clechasseur/pathcopycopy/issues/27]
- Items added to the main contextual menu will now use the first appropriate shortcut key if the one originally selected is not available [https://github.com/clechasseur/pathcopycopy/issues/57]
- New custom command option to remove file extension [https://github.com/clechasseur/pathcopycopy/issues/76]
- Improved tooltips in Settings application
- Can now copy paths of .url (internet shortcut) and .website (pinned website) files [https://github.com/clechasseur/pathcopycopy/issues/77]